Fix alignment of more icon

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -496,6 +496,10 @@ a.action > img {
 	margin-bottom: -1px;
 }
 
+.selectedActions .actions-selected .icon-more {
+	margin-top: -3px;
+}
+
 #fileList td a {
 	a.action {
 		display: inline;
